@@ -227,7 +227,7 @@ public class JdwpCommandPacket extends JdwpPacket {
 	protected void readSpecificHeaderFields(DataInputStream dataInStream)
 			throws IOException {
 		byte commandSet = dataInStream.readByte();
-		fCommand = dataInStream.readByte() + (commandSet << 8);
+		fCommand = (dataInStream.readByte() & 0xff) + (commandSet << 8);
 	}
 
 	/**
@@ -255,8 +255,9 @@ public class JdwpCommandPacket extends JdwpPacket {
 		for (Field field : fields) {
 			if ((field.getModifiers() & Modifier.PUBLIC) == 0
 					|| (field.getModifiers() & Modifier.STATIC) == 0
-					|| (field.getModifiers() & Modifier.FINAL) == 0)
+					|| (field.getModifiers() & Modifier.FINAL) == 0) {
 				continue;
+			}
 
 			try {
 				String name = field.getName();
@@ -265,7 +266,7 @@ public class JdwpCommandPacket extends JdwpPacket {
 					continue;
 				}
 				int value = field.getInt(null);
-				setNames.put(new Integer(value), removePrefix(name));
+				setNames.put(Integer.valueOf(value), removePrefix(name));
 			} catch (IllegalAccessException e) {
 				// Will not occur for own class.
 			} catch (IllegalArgumentException e) {
@@ -294,7 +295,7 @@ public class JdwpCommandPacket extends JdwpPacket {
 				Integer val = (Integer) field.get(null);
 				int value = val.intValue();
 				int set = value >>> 8;
-				String setName = setNames.get(new Integer(set));
+				String setName = setNames.get(Integer.valueOf(set));
 				String entryName = setName + " - " + removePrefix(name); //$NON-NLS-1$
 
 				fgCommandMap.put(val, entryName);
